tests/cases/compiler-development/artifact/errors/diagnostic-lexer-invalid-unicode-scalar.ari
fn main() -> i64 {
  let text = "\u{110000}";
  return 0;
}
